<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ConfirmFinalOrderActivity">

    <TextView
        android:id="@+id/txt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/shp_det"
        android:textSize="18sp"
        android:textColor="@android:color/black"
        android:background="@color/colorPrimary"
        android:layout_margin="15dp"
        android:textAlignment="center"
        android:textStyle="bold"/>

    <EditText
        android:id="@+id/shipment_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txt"
        android:layout_marginTop="60dp"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:hint="@string/setting_name"/>
    <EditText
        android:id="@+id/shipment_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/shipment_name"
        android:layout_marginTop="5dp"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:inputType="number"
        android:hint="@string/setting_phone"/>
    <EditText
        android:id="@+id/shipment_address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/shipment_phone"
        android:layout_marginTop="5dp"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:hint="@string/setting_address"/>

    <EditText
        android:id="@+id/shipment_city"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/shipment_address"
        android:layout_marginTop="5dp"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:hint="@string/shp_city"/>
<Button
    android:id="@+id/confirm_order_btn"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_alignParentBottom="true"
    android:text="@string/cart_next"
    android:layout_margin="20dp"
    android:background="@color/colorPrimary"
    android:textStyle="bold"
    android:textSize="20sp"/>
</RelativeLayout>