<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Sellers.SellerRegistrationActivity">

    <ImageView
        android:id="@+id/img_seller"
        android:layout_width="wrap_content"
        android:layout_height="200dp"
        android:src="@drawable/farreg"
        android:scaleType="centerCrop"/>
    <TextView
        android:id="@+id/title_seller"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/seller_reg"
        android:gravity="center"
        android:padding="5dp"
        android:textSize="20sp"
        android:layout_below="@+id/img_seller"
        android:layout_margin="20dp"
        android:textColor="@android:color/black"
        android:textStyle="bold"
        android:background="@android:color/holo_blue_dark"/>

    <EditText
        android:id="@+id/seller_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_below="@+id/title_seller"
        android:hint="@string/setting_name"
        android:layout_marginTop="10dp"
        android:inputType="text"
        android:textSize="16sp"/>
    <EditText
        android:id="@+id/seller_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_below="@+id/seller_name"
        android:hint="@string/setting_phone"
        android:layout_marginTop="10dp"
        android:inputType="number"
        android:textSize="16sp"/>
    <EditText
        android:id="@+id/seller_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_below="@+id/seller_phone"
        android:hint="@string/enter_password"
        android:layout_marginTop="10dp"
        android:inputType="textPassword"
        android:textSize="16sp"/>
    <EditText
        android:id="@+id/seller_address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_below="@+id/seller_password"
        android:hint="@string/setting_address"
        android:layout_marginTop="10dp"
        android:inputType="text"
        android:textSize="16sp"/>
    <Button
        android:id="@+id/seller_reg_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:background="@drawable/button"
        android:textAllCaps="false"
        android:layout_below="@+id/seller_address"
        android:text="@string/seller_register"
        android:layout_marginTop="10dp"
        android:inputType="text"
        android:textStyle="bold"
        android:textSize="20sp"/>

    <Button
        android:id="@+id/alredy_have_account"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:background="@drawable/input_design"
        android:backgroundTint="@android:color/holo_blue_dark"
        android:textAllCaps="false"
        android:layout_alignParentBottom="true"
        android:text="@string/alreadyaccount"
        android:layout_marginTop="10dp"
        android:inputType="text"
        android:textStyle="bold"
        android:layout_marginBottom="10dp"
        android:textSize="15sp"/>
</RelativeLayout>