<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    tools:context=".Sellers.SellerAddNewProductActivity">

    <LinearLayout
        android:id="@+id/lay_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">
    <ImageView
        android:id="@+id/select_product_image"
        android:layout_width="350dp"
        android:layout_height="200dp"
        android:cropToPadding="false"
        android:src="@drawable/selectimage"
        android:scaleType="centerCrop"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"/>
        <TextView
            android:id="@+id/tv_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/selProductImage"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@android:color/black"/>
    </LinearLayout>

<EditText
    android:id="@+id/product_name"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_below="@+id/lay_1"
    android:inputType="textMultiLine"
    android:layout_marginTop="20dp"
    android:padding="20dp"
    android:hint="@string/productName"
    android:textColor="@android:color/black"
    android:textColorHint="@android:color/black"
    android:layout_marginLeft="45dp"
    android:layout_marginRight="45dp"
    android:background="@drawable/input_design"/>
    <EditText
        android:id="@+id/product_description"
        android:layout_width="match_parent"
        android:textColor="@android:color/black"
        android:layout_height="wrap_content"
        android:layout_below="@+id/product_name"
        android:inputType="textMultiLine"
        android:layout_marginTop="10dp"
        android:padding="20dp"
        android:hint="@string/proDes"
        android:textColorHint="@android:color/black"
        android:layout_marginLeft="45dp"
        android:layout_marginRight="45dp"
        android:background="@drawable/input_design"/>
    <TextView
        android:id="@+id/rate_kg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/price_kg"
        android:textStyle="bold"
        android:textSize="20sp"
         android:layout_marginTop="15dp"
        android:layout_below="@+id/product_description"
         android:layout_centerHorizontal="true"
        android:layout_marginEnd="45dp"
        android:textColor="@android:color/black"/>
    <EditText
        android:id="@+id/product_price"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/rate_kg"
        android:inputType="number"
        android:layout_marginTop="10dp"
        android:padding="20dp"
        android:textColor="@android:color/black"
        android:hint="@string/prate"
        android:textColorHint="@android:color/black"
        android:layout_marginLeft="45dp"
        android:layout_marginRight="45dp"
        android:background="@drawable/input_design"/>

    <TextView
        android:id="@+id/quantity_kg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/quan_kg"
        android:textStyle="bold"
        android:textSize="20sp"
        android:layout_marginTop="15dp"
        android:layout_below="@+id/product_price"
        android:layout_centerHorizontal="true"
        android:layout_marginEnd="45dp"
        android:textColor="@android:color/black"/>
    <EditText
        android:id="@+id/product_quantity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/quantity_kg"
        android:inputType="number"
        android:layout_marginTop="10dp"
        android:padding="20dp"
        android:textColor="@android:color/black"
        android:hint="@string/cart_quantity"
        android:textColorHint="@android:color/black"
        android:layout_marginLeft="45dp"
        android:layout_marginRight="45dp"
        android:background="@drawable/input_design"/>
    <Button
        android:id="@+id/add_new_product"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/product_quantity"
        android:layout_marginLeft="45dp"
        android:layout_marginRight="45dp"
        android:padding="20dp"
        android:layout_marginTop="25dp"
        android:text="@string/add_new_product"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        android:textAllCaps="false"
        android:background="@drawable/button"/>
</RelativeLayout>