<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backgrndreg"
    tools:context=".LoginActivity">
    <ImageView
        android:id="@+id/login_app_logo"
        android:layout_width="300dp"
        android:layout_height="200dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:src="@drawable/applogo1"></ImageView>
<EditText
    android:id="@+id/login_phone"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_below="@+id/login_app_logo"
    android:background="@drawable/input_design"
    android:padding="20dp"
    android:layout_marginLeft="15dp"
    android:layout_marginRight="15dp"
    android:hint="@string/enter_number"
    android:inputType="number"
    android:textColor="@android:color/black"
    android:layout_marginTop="15dp"
    android:textColorHint="@android:color/black"
    android:textSize="17sp"
    android:textStyle="bold"/>
    <EditText
        android:id="@+id/login_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login_phone"
        android:background="@drawable/input_design"
        android:padding="20dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:hint="@string/enter_password"
        android:inputType="textPassword"
        android:textColor="@android:color/black"
        android:layout_marginTop="15dp"
        android:textColorHint="@android:color/black"
        android:textSize="17sp"
        android:textStyle="bold"/>
    <LinearLayout
        android:id="@+id/liniear_layout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_below="@+id/login_password"
        android:orientation="horizontal">
  <com.rey.material.widget.CheckBox
      android:id="@+id/remeber_me_chk"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      style="@style/Material.Drawable.CheckBox"
      android:text="@string/rem_me"
      android:textColor="@android:color/black"
      android:gravity="center_vertical"
      android:textSize="16sp"
      android:textStyle="bold"
      android:layout_marginStart="17dp"

      />
        <TextView
            android:id="@+id/forget_password_link"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/frgt_paswd"
            android:textColor="@android:color/black"
            android:textSize="17sp"
            android:textStyle="bold"
            android:layout_marginLeft="80dp"/>
    </LinearLayout>
    <Button
        android:id="@+id/login_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/liniear_layout1"
        android:layout_alignParentStart="true"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:background="@drawable/button"
        android:padding="17dp"
        android:textAllCaps="false"
        android:textSize="18sp"
        android:textStyle="bold"
        android:text="@string/login"
        android:textColor="@android:color/white"/>

    <TextView
        android:id="@+id/admin_panel_link"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/madmin"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/login_btn"
        android:layout_marginEnd="23dp"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginLeft="80dp"/>
    <TextView
        android:id="@+id/not_admin_panel_link"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/notadmin"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/login_btn"
       android:visibility="invisible"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_marginLeft="80dp"
        android:layout_marginStart="25dp"/>
</RelativeLayout>