<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingsActivity">
    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar_setting"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/colorPrimary">
        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar_setting"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
          <RelativeLayout
              android:layout_width="match_parent"
              android:layout_height="match_parent">

              <TextView
                  android:id="@+id/close_setting"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:text="@string/setting_close"
                  android:textColor="@android:color/white"
                  android:textSize="17sp"
                  android:textStyle="bold"
                  android:layout_alignParentStart="true"/>
              <TextView
                  android:id="@+id/update_setting"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:text="@string/setting_update"
                  android:textColor="@android:color/white"
                  android:textSize="17sp"
                  android:textStyle="bold"
                  android:layout_marginRight="10dp"
                  android:layout_alignParentEnd="true"/>
          </RelativeLayout>

        </androidx.appcompat.widget.Toolbar>
    </com.google.android.material.appbar.AppBarLayout>

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/setting_profile_image"
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:layout_marginLeft="10dp"
        android:layout_gravity="center"
        android:src="@drawable/man"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/app_bar_setting"
        app:civ_border_color="@android:color/white"
        app:civ_border_width="2dp" />
    <TextView
        android:id="@+id/profile_img_change"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/setting_imageupdt"
        android:textColor="@android:color/black"
        android:textSize="17sp"
        android:layout_marginTop="5dp"
        android:textStyle="bold"
        android:layout_marginRight="10dp"
        android:layout_below="@+id/setting_profile_image"
       android:layout_centerHorizontal="true"/>

    <EditText
        android:id="@+id/setting_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/profile_img_change"
        android:hint="@string/setting_phone"
        android:padding="10dp"
        android:inputType="number"
        android:layout_margin="20dp"/>
    <EditText
        android:id="@+id/setting_fullName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/setting_phone"
        android:hint="@string/setting_name"
        android:padding="10dp"
        android:inputType="text"
        android:layout_margin="20dp"/>
    <EditText
        android:id="@+id/setting_address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/setting_fullName"
        android:hint="@string/setting_address"
        android:inputType="text"
        android:padding="10dp"
        android:layout_margin="20dp"/>
    <Button
        android:id="@+id/security_question"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/setting_address"
        android:text="Set Security Questions"
        android:textColor="@android:color/black"
        android:textStyle="bold"
        android:padding="10dp"
        android:background="@drawable/button"
        android:layout_margin="20dp"/>

</RelativeLayout>