<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backgrndreg"
    tools:context=".RegisterActivity">
    <ImageView
        android:id="@+id/register_app_logo"
        android:layout_width="300dp"
        android:layout_height="200dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        android:src="@drawable/applogo1"></ImageView>
    <EditText
        android:id="@+id/register_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/register_app_logo"
        android:background="@drawable/input_design"
        android:padding="20dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:hint="@string/enter_name"
        android:inputType="text"
        android:textColor="@android:color/black"
        android:layout_marginTop="15dp"
        android:textColorHint="@android:color/black"
        android:textSize="17sp"
        android:textStyle="bold"/>
    <EditText
        android:id="@+id/register_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/register_name"
        android:background="@drawable/input_design"
        android:padding="20dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:hint="@string/enter_number"
        android:inputType="number"
        android:textColor="@android:color/black"
        android:layout_marginTop="15dp"
        android:textColorHint="@android:color/black"
        android:textSize="17sp"
        android:textStyle="bold"/>
    <EditText
        android:id="@+id/register_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/register_phone"
        android:background="@drawable/input_design"
        android:padding="20dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:hint="@string/enter_password"
        android:inputType="textPassword"
        android:textColor="@android:color/black"
        android:layout_marginTop="15dp"
        android:textColorHint="@android:color/black"
        android:textSize="17sp"
        android:textStyle="bold"/>

    <Button
        android:id="@+id/register_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/register_password"
        android:layout_alignParentStart="true"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:background="@drawable/button"
        android:padding="17dp"
        android:textAllCaps="false"
        android:textSize="18sp"
        android:textStyle="bold"
        android:text="@string/login"
        android:textColor="@android:color/white"/>


</RelativeLayout>